fix(CreateCourse): adjust z-index for create course button to improve layering

--- a/app/pages/private/academy/CreateCourse.css
+++ b/app/pages/private/academy/CreateCourse.css
@@ -192,7 +192,7 @@
       transition: all 0.5s ease;
       background: var(--academy-primary);
       color: white;
-      z-index: 2;
+      z-index: 0;
       height: 50px;
 
       .course-extras {
